crates/lang/macro/tests/ui/contract/fail/M-04-message-returns-non-codec.stderr
error[E0277]: the trait bound `NonCodec: WrapperTypeEncode` is not satisfied
  --> $DIR/M-04-message-returns-non-codec.rs:18:49
   |
18 |         pub fn returns_non_codec_type(&self) -> NonCodec {
   |                                                 ^^^^^^^^ the trait `WrapperTypeEncode` is not implemented for `NonCodec`
   |
   = note: required because of the requirements on the impl of `Encode` for `NonCodec`
note: required by a bound in `ink_lang::FnOutput::Output`
  --> $DIR/traits.rs:79:18
   |
79 |     type Output: scale::Encode + 'static;
   |                  ^^^^^^^^^^^^^ required by this bound in `ink_lang::FnOutput::Output`
